# RDSWeb-Custom

./: .gitignore  CONTEXTO_IA.md  CONTEXTO_IA_BACKEND.md  CONTEXTO_IA_FRONTEND.md  build.ps1  install.ps1  installer.iss  installer.nsi
Versiones Extra Login/RDS WEB VERSION ALEX/RDWeb/: Web.config
Versiones Extra Login/apps-portal-ajustado-cuidadoso/apps/: apps - copia.css  apps.css  apps.html
Versiones Extra Login/login-portal/: index.html  styles.css
Versiones Extra Login/rds-static/: README-conversion.md  apps-static.html  desktops-static.html  style.css
Versiones Extra/fusion-login/: index.html  script.js  styles.css
Versiones Extra/rds-static/: login-static.html  script.js
backend/: .env.example  package-lock.json  package.json
backend-py/: .env.example  .gitignore  PIPELINE.md  README.md  pyproject.toml
backend-py/app/: main.py
backend-py/app/core/: config.py  security.py
backend-py/app/models/: schemas.py
backend-py/app/routers/: apps.py  auth.py  launch.py
backend-py/app/services/: ad_service.py  rdcb_service.py  rdp_service.py
backend/src/: config.js  index.js
docs/: Despliegue-IIS-WindowsServer2019.html
frontend/: angular.json  package-lock.json  package.json  web.config
frontend/src/: index.html  material-theme.scss  styles.css  styles.scss  theme-colors.scss
fusion-login/: index.html  script.js  styles.css
fusion-login/apps/: apps.css  apps.html  apps.js
login-portal/: script.js
scripts/: setup-backend-service.ps1  setup-iis-prereqs.ps1  setup-iis-site.ps1  uninstall-backend-service.ps1  uninstall-iis-site.ps1
(+73 files in other folders)
